# biped_walking_controller

./: README.md
src/chronos_balance/: CMakeLists.txt  package.xml
src/chronos_balance/Recordings/: Screencast from 01-06-26 04:23:46 AM IST.webm  Screencast from 01-06-26 04:26:21 AM IST.webm  Screencast from 01-06-26 04:35:32 AM IST.webm  Screencast from 01-06-26 04:36:45 AM IST.webm  Screencast from 01-06-26 04:41:58 AM IST.webm  Screencast from 01-06-26 04:42:30 AM IST.webm  Screencast from 01-06-26 04:45:41 AM IST.webm  Screencast from 01-06-26 04:58:28 AM IST.webm  Screencast from 01-06-26 04:58:59 AM IST.webm  Screencast from 01-06-26 04:59:02 AM IST.webm  Screencast from 01-06-26 05:42:07 AM IST.webm  Screencast from 01-06-26 05:52:42 AM IST.webm  Screencast from 01-06-26 06:03:47 AM IST.webm  Screencast from 01-06-26 06:07:21 AM IST.webm  Screencast from 01-06-26 06:15:23 AM IST.webm  Screencast from 01-06-26 06:18:52 AM IST.webm  Screencast from 01-06-26 06:22:28 AM IST.webm  Screencast from 01-06-26 06:26:22 AM IST.webm  Screencast from 01-06-26 06:36:14 AM IST.webm  Screencast from 01-06-26 06:40:09 AM IST.webm  Screencast from 01-06-26 06:47:44 AM IST.webm  Screencast from 01-06-26 06:58:14 AM IST.webm  Screencast from 01-06-26 07:01:11 AM IST.webm  Screencast from 01-06-26 07:05:29 AM IST.webm  Screencast from 01-06-26 07:17:01 AM IST.webm  Screencast from 01-06-26 07:20:20 AM IST.webm  Screencast from 01-06-26 07:24:43 AM IST.webm
src/chronos_balance/config/: chronos_control.yaml
src/chronos_balance/launch/: chronos_balance.launch  display.launch
(+43 files in other folders)
